scroll glitch bug to test on iphone

--- a/src/app/pages/homepage/index.css
+++ b/src/app/pages/homepage/index.css
@@ -183,7 +183,8 @@ body {
     overflow-x: hidden;
     scroll-snap-points-y: repeat(100vh);
     scroll-snap-destination: 0 0;
-    scroll-snap-type: mandatory; /* scroll-snap-type: y mandatory; */
+    scroll-snap-type: mandatory;
+    scroll-snap-type: y mandatory;
     -webkit-overflow-scrolling: touch;
 
     &.--no-scroll {
